fix some spacing

--- a/assets/scss/marketing-index.scss
+++ b/assets/scss/marketing-index.scss
@@ -1,6 +1,5 @@
 #marketing {
   h1 {
-    padding-bottom: 20px;
     font-size: 42px;
     font-weight: 600;
     text-align: center;
@@ -19,6 +18,9 @@
 
   .hero {
     padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   #workflow {
